Pendiente pdfs y video

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -31,6 +31,9 @@
   &-white
     background-color: #fff
 
+.border-top-verde-5
+  border-top: 5px solid #B6FBF3
+
 .bg-amarillo
   background-color: #FCEEB5
 
@@ -83,6 +86,8 @@
   &-2
     // background-image: url("../assets/bg/bg2.png") !important
     background-position: bottom
+  &-3
+    background-image: url("../assets/bg/bg3.png") !important
   &-slider
     background-image: url("../assets/bg/bg-slider.png") !important
     background-position: bottom
